k8s/api-deployment.yaml
apiVersion: apps/v1
 
kind: Deployment
 
metadata:
  name: service-api
  namespace: nagp
 
spec:
 
  replicas: 4
  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
 
  selector:
    matchLabels:
      app: api
 
  template:
 
    metadata:
      labels:
        app: api
 
    spec:
 
      containers:
 
      - name: api
 
        image: meghaagarwal2324/nagp-api:v2
 
        ports:
        - containerPort: 8080
 
        resources:
 
          requests:
            cpu: "50m"
            memory: "64Mi"
 
          limits:
            cpu: "150m"
            memory: "128Mi"
