k8s/api-service.yaml
apiVersion: v1
 
kind: Service
 
metadata:
  name: service-api
  namespace: nagp
 
spec:
 
  selector:
    app: api
 
  ports:
 
  - port: 80
    targetPort: 8080
