k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: nagp
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - port: 5432
