k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
 
kind: Ingress
 
metadata:
  name: service-api-ingress
  namespace: nagp
 
spec:
 
  ingressClassName: nginx
 
  rules:
 
  - http:
 
      paths:
 
      - path: /
 
        pathType: Prefix
 
        backend:
 
          service:
 
            name: service-api
 
            port:
 
              number: 80
